--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,17 @@
         <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
         <maven.compiler.source>${maven.compiler.compilerVersion}</maven.compiler.source>
         <maven.compiler.target>${maven.compiler.compilerVersion}</maven.compiler.target>
+        <glassfish.jersey.version>2.25.1</glassfish.jersey.version>
+        <json-api.version>1.1.2</json-api.version>
     </properties>
 
     <modules>
         <module>javaee7-rest-method-patch</module>
         <module>root-resource-class</module>
         <module>rest-data-stubs</module>
+        <module>security-tests</module>
+        <module>security-integration-tests</module>
+        <module>spock-tests</module>
     </modules>
 
     <dependencyManagement>
@@ -94,7 +99,7 @@
             <dependency>
                 <groupId>org.glassfish.jersey.test-framework.providers</groupId>
                 <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
-                <version>2.25.1</version>
+                <version>${glassfish.jersey.version}</version>
                 <scope>test</scope>
                 <exclusions>
                     <exclusion>
@@ -119,7 +124,50 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>
+                <groupId>org.glassfish.jersey.media</groupId>
+                <artifactId>jersey-media-json-jackson</artifactId>
+                <version>${glassfish.jersey.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.json</groupId>
+                <artifactId>javax.json-api</artifactId>
+                <version>${json-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish</groupId>
+                <artifactId>javax.json</artifactId>
+                <version>${json-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr353</artifactId>
+                <version>2.8.9</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.0</version>
+                    <configuration>
+                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                        <trimStackTrace>false</trimStackTrace>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.22.0</version>
+                    <configuration>
+                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                        <trimStackTrace>false</trimStackTrace>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
