--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,14 @@
     </properties>
 
     <modules>
+        <module>jsonb</module>
+        <module>jackson</module>
         <module>javaee7-rest-method-patch</module>
         <module>root-resource-class</module>
         <module>rest-data-stubs</module>
         <module>security-tests</module>
         <module>security-integration-tests</module>
         <module>spock-tests</module>
-        <module>jsonb</module>
     </modules>
 
     <dependencyManagement>
@@ -158,6 +159,16 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jsr353</artifactId>
+                <version>2.8.9</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>2.8.9</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
                 <version>2.8.9</version>
             </dependency>
             <dependency>
