--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <maven.compiler.target>${maven.compiler.compilerVersion}</maven.compiler.target>
         <glassfish.jersey.version>2.25.1</glassfish.jersey.version>
         <json-api.version>1.1.2</json-api.version>
+        <aspectj.version>1.8.9</aspectj.version>
     </properties>
 
     <modules>
@@ -179,12 +180,12 @@
             <dependency>
                 <groupId>org.spockframework</groupId>
                 <artifactId>spock-core</artifactId>
-                <version>1.1-groovy-2.4</version>
+                <version>1.2-groovy-2.5</version>
             </dependency>
             <dependency>
                 <groupId>com.athaydes</groupId>
                 <artifactId>spock-reports</artifactId>
-                <version>1.6.0</version>
+                <version>1.6.1</version>
                 <exclusions>
                     <exclusion>
                         <groupId>*</groupId>
@@ -193,9 +194,19 @@
                 </exclusions>
             </dependency>
             <dependency>
+                <groupId>ru.yandex.qatools.allure</groupId>
+                <artifactId>allure-spock-1.0-adaptor</artifactId>
+                <version>1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>ru.yandex.qatools.allure</groupId>
+                <artifactId>allure-junit-adaptor</artifactId>
+                <version>1.5.4</version>
+            </dependency>
+            <dependency>
                 <groupId>org.codehaus.groovy</groupId>
-                <artifactId>groovy-all</artifactId>
-                <version>2.4.4</version>
+                <artifactId>groovy</artifactId>
+                <version>2.5.4</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -205,7 +216,7 @@
             <plugins>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.0</version>
+                    <version>3.0.0-M1</version>
                     <configuration>
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         <trimStackTrace>false</trimStackTrace>
@@ -213,7 +224,7 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.22.0</version>
+                    <version>3.0.0-M1</version>
                     <configuration>
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         <trimStackTrace>false</trimStackTrace>
