--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,4 +14,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn -B verify --file pom.xml
+      run: mvn -fn -B verify -Dsonar.projectKey=Tibor17_dropwizard-rest-samples -Dsonar.organization=tibor17 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=1c1d303ad706a60ace7e99acd21579ec3e33d9ba 
